Add to processors, and make camelCase the standard

--- a/config.ini
+++ b/config.ini
@@ -1,42 +1,44 @@
 [common]
-debug_log=/var/log/code_distro/code_distro.log
-broker_type=ZeroMQ
+logFile=/var/log/code_distro/code_distro.log
+logLevel=\Monolog\Logger::DEBUG
+brokerType=ZeroMQ
 ZeroMQ.filter='{"type":"__name__"'
+keyLocation=key
 
-[server_incoming]
+[serverIncoming]
 ZeroMQ[prot]='tcp://'
 ZeroMQ[ip]=127.0.0.1
 ZeroMQ[port]=5555
 ZeroMQ[type]=\ZMQ::SOCKET_REP
 
-[server_outgoing]
+[serverOutgoing]
 ZeroMQ[prot]='tcp://'
 ZeroMQ[ip]=127.0.0.1
 ZeroMQ[port]=5556
 ZeroMQ[type]=\ZMQ::SOCKET_PUB
 
-[client_incoming]
+[clientIncoming]
 ZeroMQ[prot]='tcp://'
 ZeroMQ[ip]=127.0.0.1
 ZeroMQ[port]=5556
 ZeroMQ[type]=\ZMQ::SOCKET_SUB
 
-[client_outgoing]
+[clientOutgoing]
 ZeroMQ[prot]='tcp://'
 ZeroMQ[ip]=127.0.0.1
 ZeroMQ[port]=5555
 ZeroMQ[type]=\ZMQ::SOCKET_REQ
 
-[github_hook]
+[GithubHook]
 processor=GithubHook
-temp_directory=/tmp
+tempDirectory=/tmp
 
-[github_patch]
+[GithubPatch]
 processor=GithubPatch
 repo_bmcgavin_cross-words=/tmp/patcher/bmcgavin/cross-words
 repo_bmcgavin_code-distro=/tmp/patcher/bmcgavin/code-distro
 
-[complete]
+[Complete]
 processor=Complete
 addresses[]=rich@linuxplicable.org
 
