Up the error reporting level

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [common]
 logFile=/var/log/code_distro/code_distro.log
-logLevel=\Monolog\Logger::DEBUG
+logLevel=\Monolog\Logger::ERROR
 brokerType=ZeroMQ
 ZeroMQ.filter='{"type":"__name__"'
 keyLocation=key
