Fix this silly key location on all instances

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ logFile=/var/log/code_distro/code_distro.log
 logLevel=\Monolog\Logger::ERROR
 brokerType=ZeroMQ
 ZeroMQ.filter='{"type":"__name__"'
-keyLocation=key
+keyLocation=/etc/code-distro/key
 
 [serverIncoming]
 ZeroMQ[prot]='tcp://'
