Add BitbucketHook, change GithubPatch to GitPatch

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [common]
 logFile=/var/log/code_distro/code_distro.log
-logLevel=\Monolog\Logger::ERROR
+logLevel=\Monolog\Logger::DEBUG
 brokerType=ZeroMQ
 ZeroMQ.filter='{"type":"__name__"'
 keyLocation=/etc/code-distro/key
@@ -33,11 +33,16 @@ ZeroMQ[type]=\ZMQ::SOCKET_REQ
 processor=GithubHook
 tempDirectory=/tmp
 
-[GithubPatch]
-processor=GithubPatch
+[BitbucketHook]
+processor=BitbucketHook
+tempDirectory=/tmp
+
+[GitPatch]
+processor=GitPatch
 repo_bmcgavin_cross-words_develop=/tmp/patcher/bmcgavin/cross-words/develop
 repo_bmcgavin_cross-words_master=/tmp/patcher/bmcgavin/cross-words/master
 repo_bmcgavin_code-distro=/tmp/patcher/bmcgavin/code-distro
+repo_bmcgavin_livereader=/tmp/patcher/bmcgavin/livereader
 
 [Complete]
 processor=Complete
