--- a/config.ini
+++ b/config.ini
@@ -43,6 +43,7 @@ repo_bmcgavin_cross-words_develop=/var/www/bmcgavin/cross-words/develop
 repo_bmcgavin_cross-words_master=/var/www/bmcgavin/cross-words/master
 repo_bmcgavin_code-distro=/var/www/bmcgavin/code-distro
 repo_bmcgavin_livereader=/var/www/bmcgavin/livereader
+repo_bmcgavin_tsr=/var/www/bmcgavin/tsr
 
 [Complete]
 processor=Complete
