Add generic repo handling
Prevent the need to alter the code if a new repo in an already-configured namespace is added

--- a/config.ini
+++ b/config.ini
@@ -44,6 +44,7 @@ repo_bmcgavin_cross-words_master=/var/www/bmcgavin/cross-words/master
 repo_bmcgavin_code-distro=/var/www/bmcgavin/code-distro
 repo_bmcgavin_livereader=/var/www/bmcgavin/livereader
 repo_bmcgavin_tsr=/var/www/bmcgavin/tsr
+repo_bmcgavin_*=/var/www/bmcgavin/*
 
 [Complete]
 processor=Complete
